# tinyrss

./: .env  .gitignore  Cargo.toml  config.example.toml
.sqlx/: query-409bf612e263d5896d88581699c46cce6c195937bfbe6235beb9c9ee50926cee.json  query-485219026676c2aa1f290ccdc08b9e273539d572463f3e01ac1e27f80fbb2ab6.json  query-d2876f4fe9d0740c5a12602761f21cae804848507a922f466188702000bb048d.json
migrations/: 20231219052713_init.sql
src/: config.rs  db.rs  main.rs  webhook.rs
