[package]
name = "tinyrss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0.6"
reqwest = "0.11.23"
webhook = "2.1.2"
serde = "1.0.193"
toml = "0.8.8"
tokio = { version = "1.35.0", features = ["full"] }
html2text = "0.7.1"
chrono = "0.4.31"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenvy = "0.15.7"
log = "0.4.20"
twink = { version = "1.1.2", features = ["12-hour", "log"] }
